deployments/pathweb/workloads/home-network/redis-ha/haproxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-ha-proxy
  namespace: home-network
  labels:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/instance: redis-ha-proxy
spec:
  selector:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/instance: redis-ha-proxy
  ports:
  - name: stats
    protocol: TCP
    appProtocol: http
    port: 8080
    targetPort: 8080
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
  - name: redis-readonly
    protocol: TCP
    port: 6380
    targetPort: 6380
  type: ClusterIP
