deployments/pathweb/workloads/home-network/redis-ha/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ha
  namespace: home-network
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/instance: redis-ha
      app.kubernetes.io/component: node
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: redis
          app.kubernetes.io/instance: redis-ha
          app.kubernetes.io/component: node
    ports:
    - port: 6379
    - port: 26379 # Sentinel port
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: haproxy
          app.kubernetes.io/instance: redis-ha-proxy
    ports:
    - port: 6379
  egress:
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
